--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hamsa Sarees</title>
+<title>Hamsa Sarees.</title>
 
-<!-- CSP – Google Auth + Firebase SAFE -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   script-src 'self' 'unsafe-inline'
@@ -18,7 +17,8 @@
     https://www.googleapis.com
     https://firestore.googleapis.com
     https://securetoken.googleapis.com
-    https://identitytoolkit.googleapis.com;
+    https://identitytoolkit.googleapis.com
+    https://firebasestorage.googleapis.com;
   frame-src
     https://accounts.google.com
     https://*.firebaseapp.com;
@@ -34,14 +34,14 @@ body{
   background:#0d1117;
   color:#e6edf3;
 }
-.container{max-width:1100px;margin:auto;padding:20px}
+.container{max-width:1150px;margin:auto;padding:20px}
 header{
   display:flex;justify-content:space-between;align-items:center;
-  margin-bottom:20px;
+  margin-bottom:24px;
 }
 .brand{display:flex;gap:12px;align-items:center}
 .logo{
-  width:44px;height:44px;border-radius:12px;
+  width:46px;height:46px;border-radius:12px;
   background:linear-gradient(135deg,#00aaff,#4dd0e1);
   display:flex;align-items:center;justify-content:center;
   font-weight:800;color:#001;
@@ -56,20 +56,39 @@ header{
   color:#c9d1d9;padding:8px 14px;border-radius:8px;
 }
 .card{
-  background:#161b22;border-radius:12px;
-  padding:16px;margin-bottom:14px;
+  background:#161b22;border-radius:14px;
+  padding:16px;
 }
 .grid{
-  display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-  gap:14px;
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(230px,1fr));
+  gap:18px;
 }
+.product-card{
+  background:#161b22;
+  border-radius:14px;
+  overflow:hidden;
+  transition:transform .2s, box-shadow .2s;
+}
+.product-card:hover{
+  transform:translateY(-6px);
+  box-shadow:0 20px 40px rgba(0,0,0,.5);
+}
+.product-card img{
+  width:100%;
+  height:260px;
+  object-fit:cover;
+}
+.product-info{
+  padding:14px;
+}
+.price{color:#7ee0b2;font-weight:800}
+.small{color:#8b949e;font-size:14px}
+.hidden{display:none}
 input{
   width:100%;padding:10px;border-radius:8px;
   border:1px solid #30363d;background:#0d1117;color:#e6edf3;
 }
-.small{color:#8b949e;font-size:14px}
-.hidden{display:none}
-.error{color:#f85149;margin-top:8px}
 </style>
 </head>
 
@@ -92,16 +111,18 @@ input{
   </div>
 </header>
 
-<div id="authError" class="error"></div>
-
 <!-- ADMIN PANEL -->
-<div id="adminPanel" class="card hidden">
-  <h3>Admin Panel</h3>
+<div id="adminPanel" class="card hidden" style="margin-bottom:24px">
+  <h3>Admin – Add Product</h3>
+
   <input id="pName" placeholder="Product name">
   <br><br>
   <input id="pPrice" type="number" placeholder="Price">
   <br><br>
-  <button id="addProductBtn" class="btn">Add product</button>
+  <input id="pImages" type="file" accept="image/*" multiple>
+  <div class="small">Max 6 images</div>
+  <br>
+  <button id="addProductBtn" class="btn">Upload Product</button>
 </div>
 
 <h3>Products</h3>
@@ -116,44 +137,40 @@ import {
   signInWithPopup, signOut, onAuthStateChanged
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import {
-  getFirestore, collection, addDoc, getDocs, deleteDoc, doc
+  getFirestore, collection, addDoc, getDocs, deleteDoc, doc, serverTimestamp
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import {
+  getStorage, ref, uploadBytes, getDownloadURL
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
 
 const ADMIN_UID = "EenXHJIvZpavhkGTCI8EZyFAfH93";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
   authDomain: "hamsasarees-24738.firebaseapp.com",
-  projectId: "hamsasarees-24738"
+  projectId: "hamsasarees-24738",
+  storageBucket: "hamsasarees-24738.appspot.com"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
+const storage = getStorage(app);
 const provider = new GoogleAuthProvider();
 
-const loginBtn = document.getElementById("loginBtn");
+const loginBtn = loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const userEmail = document.getElementById("userEmail");
 const adminPanel = document.getElementById("adminPanel");
 const productsDiv = document.getElementById("products");
-const authError = document.getElementById("authError");
 
-loginBtn.onclick = async () => {
-  authError.textContent = "";
-  try{
-    await signInWithPopup(auth, provider);
-  }catch(e){
-    authError.textContent = e.message;
-  }
-};
+loginBtn.onclick = ()=>signInWithPopup(auth,provider);
+logoutBtn.onclick = ()=>signOut(auth);
 
-logoutBtn.onclick = () => signOut(auth);
-
-onAuthStateChanged(auth, user => {
-  productsDiv.innerHTML = "";
+onAuthStateChanged(auth, user=>{
+  productsDiv.innerHTML="";
   if(!user){
-    userEmail.textContent = "";
+    userEmail.textContent="";
     loginBtn.classList.remove("hidden");
     logoutBtn.classList.add("hidden");
     adminPanel.classList.add("hidden");
@@ -161,34 +178,38 @@ onAuthStateChanged(auth, user => {
     return;
   }
 
-  userEmail.textContent = user.email;
+  userEmail.textContent=user.email;
   loginBtn.classList.add("hidden");
   logoutBtn.classList.remove("hidden");
 
-  if(user.uid === ADMIN_UID){
+  if(user.uid===ADMIN_UID){
     adminPanel.classList.remove("hidden");
+    loadProducts(true);
+  } else {
+    loadProducts(false);
   }
-
-  loadProducts(user.uid === ADMIN_UID);
 });
 
 async function loadProducts(isAdmin){
-  productsDiv.innerHTML = "";
-  const snap = await getDocs(collection(db,"products"));
+  productsDiv.innerHTML="";
+  const snap=await getDocs(collection(db,"products"));
   snap.forEach(d=>{
-    const p = d.data();
-    const el = document.createElement("div");
-    el.className = "card";
-    el.innerHTML = `
-      <strong>${p.name}</strong>
-      <div class="small">₹${p.price}</div>
-      ${isAdmin ? `<button data-id="${d.id}" class="btn-ghost del">Delete</button>` : ""}
+    const p=d.data();
+    const card=document.createElement("div");
+    card.className="product-card";
+    card.innerHTML=`
+      <img src="${p.images?.[0]||''}">
+      <div class="product-info">
+        <strong>${p.name}</strong>
+        <div class="price">₹${p.price}</div>
+        ${isAdmin?`<button data-id="${d.id}" class="btn-ghost del">Delete</button>`:""}
+      </div>
     `;
-    productsDiv.appendChild(el);
+    productsDiv.appendChild(card);
   });
 
   document.querySelectorAll(".del").forEach(b=>{
-    b.onclick = async ()=> {
+    b.onclick=async()=>{
       await deleteDoc(doc(db,"products",b.dataset.id));
       loadProducts(true);
     };
@@ -196,11 +217,24 @@ async function loadProducts(isAdmin){
 }
 
 document.getElementById("addProductBtn").onclick = async ()=>{
-  const name = pName.value.trim();
-  const price = Number(pPrice.value);
-  if(!name || !price) return;
-  await addDoc(collection(db,"products"),{name,price});
-  pName.value = pPrice.value = "";
+  const name=pName.value.trim();
+  const price=Number(pPrice.value);
+  const files=[...pImages.files];
+
+  if(!name||!price||files.length===0||files.length>6) return alert("Invalid input");
+
+  const urls=[];
+  for(const f of files){
+    const r=ref(storage,`products/${Date.now()}_${f.name}`);
+    await uploadBytes(r,f);
+    urls.push(await getDownloadURL(r));
+  }
+
+  await addDoc(collection(db,"products"),{
+    name,price,images:urls,createdAt:serverTimestamp()
+  });
+
+  pName.value=pPrice.value=pImages.value="";
   loadProducts(true);
 };
 
