--- a/index.html
+++ b/index.html
@@ -480,47 +480,66 @@ footer{
     </div>
   </div>
 
-  <div class="modal" id="adminModal" aria-hidden="true">
-    <div class="modal-box" role="dialog" aria-modal="true" style="max-height:90vh;overflow-y:auto">
-      <button class="close-x" id="closeAdmin" title="Close">✕</button>
-      <h2>Admin Panel</h2>
-      
-      <!-- Add Product Section -->
-      <div style="border-bottom:1px solid rgba(255,255,255,0.06);padding-bottom:16px;margin-bottom:16px;background:rgba(255,255,255,0.01);padding:16px;border-radius:10px">
-        <h3 style="margin-top:0;color:#eaf6ff">Add Product</h3>
-        <p class="small">Products added here are saved to Firestore (admin-only).</p>
-        <div class="field"><label class="small" style="font-weight:600">Title *</label><input id="admin_pTitle" placeholder="Product title" required></div>
-        <div class="field"><label class="small" style="font-weight:600">Price (₹) *</label><input id="admin_pPrice" type="number" placeholder="1499" required></div>
-        <div class="field"><label class="small" style="font-weight:600">Tag</label><input id="admin_pTag" placeholder="e.g. New, Best"></div>
-        <div class="field">
-          <label class="small" style="font-weight:600">Image URLs</label>
-          <div id="imageUrlsContainer">
-            <input class="imageUrlInput" type="text" placeholder="Image URL 1" style="margin-bottom: 8px;">
-          </div>
-          <button id="addImageUrl" type="button" class="btn-ghost" style="margin-top:8px;">Add another image</button>
-        </div>
-        <div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end">
-          <button id="adminSave" class="btn">Add Product</button>
-        </div>
+<div class="modal" id="adminModal" aria-hidden="true">
+  <div class="modal-box" role="dialog" aria-modal="true" style="max-height:90vh;overflow-y:auto">
+    <button class="close-x" id="closeAdmin" title="Close">✕</button>
+    <h2>Admin Panel</h2>
+
+    <!-- ADD / EDIT PRODUCT -->
+    <div style="border-bottom:1px solid rgba(255,255,255,0.06);padding:16px;margin-bottom:16px;background:rgba(255,255,255,0.01);border-radius:10px">
+      <h3 id="adminFormTitle" style="margin-top:0;color:#eaf6ff">Add Product</h3>
+      <p class="small">Only admin can add or edit products.</p>
+
+      <div class="field">
+        <label class="small" style="font-weight:600">Title *</label>
+        <input id="admin_pTitle" placeholder="Product title">
       </div>
 
-      <!-- Remove Product Section -->
-      <div>
-        <h3 style="margin-top:0;color:#eaf6ff">Remove Product</h3>
-        <p class="small">Click the delete button next to a product to remove it.</p>
-        <div id="adminProductsList" style="border:1px solid rgba(255,255,255,0.06);border-radius:10px;max-height:400px;overflow-y:auto;background:rgba(255,255,255,0.01)">
-          <div class="small" style="padding:12px;text-align:center;color:var(--muted)">Loading products...</div>
-        </div>
+      <div class="field">
+        <label class="small" style="font-weight:600">Selling Price (₹) *</label>
+        <input id="admin_pPrice" type="number" placeholder="1499">
       </div>
 
-      <div style="margin-top:16px;display:flex;gap:8px;justify-content:flex-end">
-        <button id="adminCancel" class="btn-ghost">Close</button>
+      <div class="field">
+        <label class="small" style="font-weight:600">MRP (₹)</label>
+        <input id="admin_pMrp" type="number" placeholder="1999">
+      </div>
+
+      <div class="field">
+        <label class="small" style="font-weight:600">Tag</label>
+        <input id="admin_pTag" placeholder="New / Best Seller">
+      </div>
+
+      <div class="field">
+        <label class="small" style="font-weight:600">Image URLs</label>
+        <div id="imageUrlsContainer">
+          <input class="imageUrlInput" placeholder="Image URL 1" style="margin-bottom:8px">
+        </div>
+        <button id="addImageUrl" type="button" class="btn-ghost" style="margin-top:8px">Add another image</button>
+      </div>
+
+      <div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end">
+        <button id="adminCancelEdit" class="btn-ghost" style="display:none">Cancel Edit</button>
+        <button id="adminSave" class="btn">Add Product</button>
       </div>
     </div>
-  </div>
 
-  <iframe name="hiddenFrame" style="display:none"></iframe>
-  <div id="toast" class="toast" role="status" aria-live="polite">Saved.</div>
+    <!-- PRODUCT LIST -->
+    <div>
+      <h3 style="margin-top:0;color:#eaf6ff">All Products</h3>
+      <div id="adminProductsList" style="border:1px solid rgba(255,255,255,0.06);border-radius:10px;max-height:400px;overflow-y:auto;background:rgba(255,255,255,0.01)">
+        <div class="small" style="padding:12px;text-align:center;color:var(--muted)">Loading products...</div>
+      </div>
+    </div>
+
+    <div style="margin-top:16px;display:flex;justify-content:flex-end">
+      <button id="adminClose" class="btn-ghost">Close</button>
+    </div>
+  </div>
+</div>
+
+<iframe name="hiddenFrame" style="display:none"></iframe>
+<div id="toast" class="toast" role="status" aria-live="polite">Saved.</div>
 
 <script type="module">
 (async function(){
@@ -1204,6 +1223,132 @@ window.location.href = 'payment.html';});
     alert('Initialization failed — check console.');
   }
 })();
+  let editingProductId = null;
+
+function resetAdminForm(){
+  editingProductId = null;
+  $('adminFormTitle').innerText = 'Add Product';
+  $('adminSave').innerText = 'Add Product';
+  $('adminCancelEdit').style.display = 'none';
+
+  $('admin_pTitle').value = '';
+  $('admin_pPrice').value = '';
+  $('admin_pMrp').value = '';
+  $('admin_pTag').value = '';
+  $('imageUrlsContainer').innerHTML =
+    '<input class="imageUrlInput" placeholder="Image URL 1" style="margin-bottom:8px">';
+}
+
+$('adminCancelEdit').addEventListener('click', resetAdminForm);
+$('adminClose').addEventListener('click', ()=>closeModal(adminModal));
+$('closeAdmin').addEventListener('click', ()=>closeModal(adminModal));
+
+$('addImageUrl').addEventListener('click', ()=>{
+  const c = $('imageUrlsContainer');
+  const i = document.createElement('input');
+  i.className = 'imageUrlInput';
+  i.placeholder = `Image URL ${c.children.length+1}`;
+  i.style.marginBottom = '8px';
+  c.appendChild(i);
+});
+
+$('adminSave').addEventListener('click', async ()=>{
+  const title = $('admin_pTitle').value.trim();
+  const price = Number($('admin_pPrice').value);
+  const mrp = Number($('admin_pMrp').value) || price;
+  const tag = $('admin_pTag').value.trim();
+
+  const images = [...document.querySelectorAll('.imageUrlInput')]
+    .map(i=>i.value.trim()).filter(Boolean);
+
+  if(!title || !price || images.length === 0){
+    alert('Title, price and at least one image required');
+    return;
+  }
+
+  const payload = {
+    title,
+    price,
+    mrp,
+    tag,
+    img: images[0],
+    images,
+    updatedAt: serverTimestamp()
+  };
+
+  try{
+    if(editingProductId){
+      await setDoc(doc(db,'products',editingProductId), payload, {merge:true});
+      toast('Product updated');
+    }else{
+      await addDoc(collection(db,'products'), payload);
+      toast('Product added');
+    }
+    resetAdminForm();
+    loadAdminProductsList();
+  }catch(e){
+    console.error(e);
+    alert('Save failed');
+  }
+});
+
+async function loadAdminProductsList(){
+  const box = $('adminProductsList');
+  box.innerHTML = '';
+  const snap = await getDocs(collection(db,'products'));
+
+  if(snap.empty){
+    box.innerHTML = '<div class="small" style="padding:12px;color:var(--muted)">No products</div>';
+    return;
+  }
+
+  snap.forEach(d=>{
+    const p = d.data();
+    const row = document.createElement('div');
+    row.style.cssText = 'display:flex;gap:8px;align-items:center;padding:10px;border-bottom:1px solid rgba(255,255,255,0.04)';
+    row.innerHTML = `
+      <div style="flex:1">
+        <strong>${escapeHtml(p.title)}</strong>
+        <div class="small">₹${p.price}</div>
+      </div>
+      <button class="btn-ghost editBtn">Edit</button>
+      <button class="btn deleteBtn" style="background:#ff5c5c">Delete</button>
+    `;
+
+    row.querySelector('.editBtn').onclick = ()=>{
+      editingProductId = d.id;
+      $('adminFormTitle').innerText = 'Edit Product';
+      $('adminSave').innerText = 'Update Product';
+      $('adminCancelEdit').style.display = 'inline-block';
+
+      $('admin_pTitle').value = p.title || '';
+      $('admin_pPrice').value = p.price || '';
+      $('admin_pMrp').value = p.mrp || '';
+      $('admin_pTag').value = p.tag || '';
+
+      const c = $('imageUrlsContainer');
+      c.innerHTML = '';
+      (p.images||[]).forEach((url,i)=>{
+        const inp = document.createElement('input');
+        inp.className = 'imageUrlInput';
+        inp.value = url;
+        inp.placeholder = `Image URL ${i+1}`;
+        inp.style.marginBottom = '8px';
+        c.appendChild(inp);
+      });
+    };
+
+    row.querySelector('.deleteBtn').onclick = async ()=>{
+      if(!confirm('Delete this product?')) return;
+      await deleteDoc(doc(db,'products',d.id));
+      toast('Deleted');
+      loadAdminProductsList();
+    };
+
+    box.appendChild(row);
+  });
+}
+
 </script>
 
   <!-- Image zoom modal (added) -->
