--- a/index.html
+++ b/index.html
@@ -8,38 +8,41 @@
   
 
 <style>
-/* ================= ROOT ================= */
+/* ================= ROOT THEME ================= */
 :root{
-  --bg:#0b1020;
-  --panel:#121a2f;
-  --panel-soft:#162140;
-  --line:rgba(255,255,255,0.08);
+  --bg-main:#0a0e1a;
+  --bg-panel:#11172c;
+  --bg-soft:#161e3d;
 
-  --primary:#e6b566;
-  --primary-dark:#cfa34e;
+  --border:rgba(255,255,255,0.08);
 
-  --text:#eef2ff;
-  --muted:#9fb0d1;
+  --gold:#e6b566;
+  --gold-dark:#cfa34e;
+
+  --text-main:#eef2ff;
+  --text-muted:#9fb0d1;
 
   --success:#3ddc97;
   --danger:#ff6b6b;
 }
 
+/* ================= RESET ================= */
 *{box-sizing:border-box}
 
 html,body{
   margin:0;
-  padding:0;
   font-family:Inter,system-ui,Arial,sans-serif;
-  background:linear-gradient(180deg,#080c18,#0b1020);
-  color:var(--text);
+  background:
+    radial-gradient(900px 400px at 20% -10%, rgba(230,181,102,.12), transparent 60%),
+    linear-gradient(180deg,#080c18,#0a0e1a);
+  color:var(--text-main);
 }
 
 /* ================= LAYOUT ================= */
 .container{
   max-width:1200px;
-  margin:24px auto;
-  padding:0 16px;
+  margin:auto;
+  padding:20px 16px;
 }
 
 /* ================= HEADER ================= */
@@ -47,10 +50,11 @@ header{
   display:flex;
   align-items:center;
   gap:18px;
-  padding:14px 16px;
-  border-radius:14px;
-  background:var(--panel);
-  border:1px solid var(--line);
+  padding:16px 18px;
+  border-radius:16px;
+  background:linear-gradient(180deg,#12183a,#0f152e);
+  border:1px solid var(--border);
+  box-shadow:0 20px 50px rgba(0,0,0,.45);
 }
 
 .brand{
@@ -60,10 +64,10 @@ header{
 }
 
 .logo{
-  width:44px;
-  height:44px;
-  border-radius:10px;
-  background:var(--primary);
+  width:48px;
+  height:48px;
+  border-radius:12px;
+  background:linear-gradient(135deg,var(--gold),#f3d48c);
   color:#3b2b08;
   font-weight:900;
   display:flex;
@@ -74,23 +78,22 @@ header{
 .title{
   font-weight:800;
   font-size:16px;
-  line-height:1.2;
 }
 
 .small{
   font-size:13px;
-  color:var(--muted);
+  color:var(--text-muted);
 }
 
 /* ================= SEARCH ================= */
 .search{
   display:flex;
   align-items:center;
-  gap:8px;
-  background:#0f1730;
-  border:1px solid var(--line);
-  padding:8px 12px;
-  border-radius:10px;
+  gap:10px;
+  background:#0f1738;
+  border:1px solid var(--border);
+  padding:10px 14px;
+  border-radius:14px;
   max-width:420px;
   width:100%;
 }
@@ -100,7 +103,8 @@ header{
   background:none;
   border:none;
   outline:none;
-  color:var(--text);
+  color:var(--text-main);
+  font-size:14px;
 }
 
 /* ================= BUTTONS ================= */
@@ -109,49 +113,54 @@ button,a{
 }
 
 .btn{
-  background:var(--primary);
+  background:linear-gradient(90deg,var(--gold),#f3d48c);
   color:#3b2b08;
   border:none;
-  padding:10px 16px;
-  border-radius:10px;
-  font-weight:700;
+  padding:10px 18px;
+  border-radius:14px;
+  font-weight:800;
   cursor:pointer;
+  box-shadow:0 10px 30px rgba(230,181,102,.35);
 }
 
-.btn:hover{ background:var(--primary-dark); }
+.btn:hover{
+  transform:translateY(-1px);
+}
 
 .btn-ghost{
-  background:#0f1730;
-  border:1px solid var(--line);
-  color:var(--text);
-  padding:9px 14px;
-  border-radius:10px;
+  background:#0f1738;
+  border:1px solid var(--border);
+  color:var(--text-main);
+  padding:9px 16px;
+  border-radius:14px;
   cursor:pointer;
 }
 
 .btn-ghost:hover{
-  background:#17214a;
+  background:#18225a;
 }
 
 /* ================= HERO ================= */
 .hero{
   display:grid;
-  grid-template-columns:1.3fr .7fr;
-  gap:16px;
-  margin-top:18px;
+  grid-template-columns:1.4fr .6fr;
+  gap:18px;
+  margin-top:22px;
 }
 
 .hero-card,
 .promo{
-  background:var(--panel);
-  border:1px solid var(--line);
-  border-radius:14px;
-  padding:20px;
+  background:linear-gradient(180deg,#141c3f,#0f1533);
+  border:1px solid var(--border);
+  border-radius:20px;
+  padding:24px;
+  box-shadow:0 30px 70px rgba(0,0,0,.45);
 }
 
 .hero-card h1{
   margin:0 0 10px;
-  font-size:28px;
+  font-size:30px;
+  line-height:1.25;
 }
 
 .promo{
@@ -162,62 +171,96 @@ button,a{
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-  gap:16px;
-  margin-top:16px;
+  gap:18px;
+  margin-top:18px;
 }
 
 /* ================= PRODUCT CARD ================= */
 .card{
-  background:var(--panel-soft);
-  border:1px solid var(--line);
-  border-radius:14px;
-  padding:10px;
+  background:linear-gradient(180deg,#18245a,#111a3d);
+  border:1px solid var(--border);
+  border-radius:18px;
+  padding:12px;
   cursor:pointer;
-  transition:transform .2s ease;
+  transition:.25s ease;
+  box-shadow:0 18px 45px rgba(0,0,0,.5);
 }
 
 .card:hover{
-  transform:translateY(-4px);
+  transform:translateY(-6px);
 }
 
 /* IMAGE */
 .imgwrap{
   width:100%;
   aspect-ratio:3/4;
-  border-radius:10px;
+  border-radius:14px;
   overflow:hidden;
-  background:#0a0f20;
+  background:#080c1f;
+  position:relative;
 }
 
 .imgwrap img{
   width:100%;
   height:100%;
   object-fit:cover;
+  transition:transform .4s ease;
+}
+
+.card:hover .imgwrap img{
+  transform:scale(1.05);
 }
 
 /* TAG */
 .tag{
   position:absolute;
-  margin:8px;
-  padding:4px 10px;
-  background:var(--primary);
+  top:10px;
+  left:10px;
+  padding:4px 12px;
+  background:linear-gradient(90deg,var(--gold),#f3d48c);
   color:#3b2b08;
   font-size:12px;
-  font-weight:700;
+  font-weight:800;
   border-radius:999px;
 }
 
 /* TEXT */
 .card h3{
-  margin:10px 0 4px;
+  margin:12px 0 6px;
   font-size:15px;
+  font-weight:700;
 }
 
-.price{
+/* ================= PRICE ================= */
+.price-wrap{
+  display:flex;
+  align-items:baseline;
+  gap:8px;
+}
+
+.price-old{
+  font-size:13px;
+  color:var(--text-muted);
+  text-decoration:line-through;
+}
+
+.price-new{
+  font-size:17px;
+  font-weight:900;
+  color:var(--gold);
+}
+
+.discount-badge{
+  margin-left:auto;
+  font-size:12px;
   font-weight:800;
-  color:var(--primary);
+  background:#7ee0b2;
+  color:#0a0e1a;
+  padding:4px 10px;
+  border-radius:999px;
 }
 
+/* ================= RATING ================= */
 .product-rating{
   font-size:13px;
   color:var(--success);
@@ -227,7 +270,7 @@ button,a{
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(5,8,15,.85);
+  background:rgba(5,8,15,.9);
   display:none;
   align-items:center;
   justify-content:center;
@@ -237,14 +280,15 @@ button,a{
 .modal.show{display:flex}
 
 .modal-box{
-  background:var(--panel);
-  border:1px solid var(--line);
-  border-radius:14px;
-  padding:20px;
+  background:linear-gradient(180deg,#162051,#0f1533);
+  border:1px solid var(--border);
+  border-radius:20px;
+  padding:24px;
   max-width:900px;
   width:100%;
   max-height:90vh;
   overflow:auto;
+  box-shadow:0 40px 120px rgba(0,0,0,.7);
 }
 
 /* CLOSE BUTTON */
@@ -252,49 +296,49 @@ button,a{
   float:right;
   background:none;
   border:none;
-  color:var(--muted);
-  font-size:18px;
+  color:var(--text-muted);
+  font-size:20px;
   cursor:pointer;
 }
 
 /* ================= PRODUCT DETAIL ================= */
-.product-detail-box{ max-width:1000px; }
+.product-detail-box{max-width:1000px}
 
 .pd-layout{
   display:grid;
   grid-template-columns:1fr 1fr;
-  gap:18px;
+  gap:20px;
 }
 
 .pd-main-img{
   width:100%;
-  border-radius:12px;
+  border-radius:16px;
 }
 
 .pd-thumbs{
   display:flex;
   gap:8px;
-  margin-top:8px;
+  margin-top:10px;
 }
 
 .pd-thumbs img{
-  width:60px;
-  height:80px;
+  width:64px;
+  height:86px;
   object-fit:cover;
-  border-radius:8px;
+  border-radius:10px;
   opacity:.6;
   cursor:pointer;
 }
 
 .pd-thumbs img.active{
   opacity:1;
-  outline:2px solid var(--primary);
+  outline:2px solid var(--gold);
 }
 
 .pd-price{
-  font-size:20px;
-  font-weight:800;
-  color:var(--primary);
+  font-size:22px;
+  font-weight:900;
+  color:var(--gold);
 }
 
 /* ================= REVIEWS ================= */
@@ -305,7 +349,7 @@ button,a{
 }
 
 .review-stars span.active{
-  color:var(--primary);
+  color:var(--gold);
 }
 
 .reviews-list{
@@ -316,27 +360,21 @@ button,a{
 }
 
 .review-item{
-  background:#0f1730;
-  border:1px solid var(--line);
-  border-radius:10px;
+  background:#0f1738;
+  border:1px solid var(--border);
+  border-radius:12px;
   padding:10px;
 }
 
-/* ================= ADMIN ================= */
+/* ================= ADMIN INPUTS ================= */
 .field input,
 .field textarea{
   width:100%;
-  background:#0f1730;
-  border:1px solid var(--line);
-  border-radius:10px;
+  background:#0f1738;
+  border:1px solid var(--border);
+  border-radius:12px;
   padding:10px;
-  color:var(--text);
-}
-
-/* ================= FOOTER ================= */
-footer{
-  margin-top:24px;
-  color:var(--muted);
+  color:var(--text-main);
 }
 
 /* ================= MOBILE ================= */
@@ -344,35 +382,6 @@ footer{
   header{flex-direction:column}
   .hero{grid-template-columns:1fr}
   .pd-layout{grid-template-columns:1fr}
-}
-  /* ===== PRICE WITH MRP + SELL PRICE ===== */
-
-.price-wrap{
-  display:flex;
-  align-items:baseline;
-  gap:8px;
-}
-
-.price-old{
-  font-size:13px;
-  color:var(--muted);
-  text-decoration:line-through;
-}
-
-.price-new{
-  font-size:17px;
-  font-weight:900;
-  color:var(--primary);
-}
-
-.discount-badge{
-  margin-left:auto;
-  font-size:12px;
-  font-weight:700;
-  color:#0b1020;
-  background:#7ee0b2;
-  padding:3px 8px;
-  border-radius:999px;
 }
 
 </style>
