--- a/payment.html
+++ b/payment.html
@@ -36,12 +36,22 @@
   <div class="card">
     <h1>Secure Payment</h1>
     <div class="small">Powered by Razorpay</div>
-<div class="row" style="text-align:center">
-  <img id="productImg"
-       style="max-width:100%;border-radius:12px;margin-bottom:12px;display:none"
-       alt="Product image">
-</div>
-
+ <!-- 🔴 ADD THIS EXACTLY HERE -->
+  <div class="row" style="text-align:center">
+    <img
+      id="productImg"
+      alt="Product image"
+      style="
+        max-width:100%;
+        max-height:260px;
+        object-fit:cover;
+        border-radius:12px;
+        margin-bottom:12px;
+        display:none;
+      "
+    >
+  </div>
+  <!-- 🔴 END -->
     <div class="row">
       <label>Product</label>
       <input id="product" readonly />
